implemented HATEOAES at Vehicle and HourlyHate services